--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,13 @@ image: docker:latest
 services:
   - docker:dind
 
+variables:
+  http_proxy: "http://ldn3log1.ebrd.com:8888"
+  https_proxy: "http://ldn3log1.ebrd.com:8888"
+  no_proxy: "ldn1cvs2.ebrd.com,localhost,docker,docker:2375"
+  #DOCKER_HOST: tcp://docker:2375/
+  DOCKER_DRIVER: overlay2
+
 before_script:
   - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
 
