--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ services:
 before_script:
   - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
 
-build-master:
+update-prod:
   stage: build
   script:
     - docker build --pull -t "$CI_REGISTRY_IMAGE" .
@@ -24,7 +24,7 @@ build-master:
   only:
     - master
 
-build:
+test-build:
   stage: build
   script:
     - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG" .
