--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,9 +20,10 @@ update-prod:
   stage: build
   script:
     - export TODAY=`date -I`
-    - docker build --pull -t "$CI_REGISTRY_IMAGE" .
-    - docker push "$CI_REGISTRY_IMAGE"
-    - docker tag "${CI_REGISTRY_IMAGE}" "${CI_REGISTRY_IMAGE}:${TODAY}"
+    - docker build --pull -t "$CI_REGISTRY_IMAGE:${TODAY}" .
+    - docker push "$CI_REGISTRY_IMAGE:${TODAY}"
+    - docker tag "${CI_REGISTRY_IMAGE}:${TODAY}" "${CI_REGISTRY_IMAGE}"
+    - docker tag "${CI_REGISTRY_IMAGE}"
   only:
     - master
 
