--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ update-prod:
     - docker build --pull -t "$CI_REGISTRY_IMAGE:${TODAY}" .
     - docker push "$CI_REGISTRY_IMAGE:${TODAY}"
     - docker tag "${CI_REGISTRY_IMAGE}:${TODAY}" "${CI_REGISTRY_IMAGE}"
-    - docker tag "${CI_REGISTRY_IMAGE}"
+    - docker push "${CI_REGISTRY_IMAGE}"
   only:
     - master
 
