--- a/Dockerfile.versions
+++ b/Dockerfile.versions
@@ -1,4 +1,4 @@
 THINGS=stuff
 FIELDS="values work too!"
-NEWLINES="those\\nnifty\\nlinebreaks"
 FROM_IMAGE_SHA=ubuntu:latest
+TERRAFORM_IMAGE_SHA=hashicorp/terraform:light 
