--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -47,8 +47,7 @@ RUN apt-get install -y kubectl
 # CleanUp
 RUN rm -rf /var/lib/apt/lists/*
 
-# take Terraform from their "latest" image
-# IMAGE: hashicorp/terraform:light 
+# take Terraform from their "latest" image - IMAGE: hashicorp/terraform:light 
 COPY --from=%TERRAFORM_IMAGE_SHA% /bin/terraform /bin/terraform
 
 # Add EBRD Proxy Setup Environment variables
