--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,13 +5,9 @@ image: docker:latest
 services:
   - docker:dind
 
-# The variables below are used when using EBRD Runner!
-#variables:
-  #http_proxy: "http://ldn3log1.ebrd.com:8888"
-  #https_proxy: "http://ldn3log1.ebrd.com:8888"
-  #no_proxy: "ldn1cvs2.ebrd.com,localhost,docker,docker:2375"
-  ##DOCKER_HOST: tcp://docker:2375/
-  #DOCKER_DRIVER: overlay2
+variables:
+  #DOCKER_HOST: tcp://docker:2375/
+  DOCKER_DRIVER: overlay2
 
 before_script:
   - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
@@ -19,18 +15,13 @@ before_script:
 update-prod:
   stage: build
   script:
-    - export TODAY=`date -I`
-    - docker build --pull -t "$CI_REGISTRY_IMAGE:${TODAY}" .
-    - docker push "$CI_REGISTRY_IMAGE:${TODAY}"
-    - docker tag "${CI_REGISTRY_IMAGE}:${TODAY}" "${CI_REGISTRY_IMAGE}"
-    - docker push "${CI_REGISTRY_IMAGE}"
+    - make update-prod
   only:
     - master
 
 test-build:
   stage: build
   script:
-    - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG" .
-    - docker push "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG"
+    - make test-build
   except:
     - master
