--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,18 @@ variables:
   #DOCKER_HOST: tcp://docker:2375/
   DOCKER_DRIVER: overlay2
 
+# the "git-remote" command below adjusts the "push" url to go via git+ssh, and not via https as default
+# essentially, the before_script below enables "git push" to work
 before_script:
+   - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
+   - eval $(ssh-agent -s)
+   - ssh-add <(echo "$GIT_SSH_PRIV_KEY")
+   - git config --global user.email "autobot@jonstones.com"
+   - git config --global user.name "Mr Autobot"
+   - mkdir -p ~/.ssh
+   - cat gitlab-known-hosts >> ~/.ssh/known_hosts
+   - git remote set-url --push origin git@gitlab.com:${CI_PROJECT_PATH}.git
+
    - make login
 
 update-prod:
