--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,7 @@
 image: docker:latest
 
+# Reference: https://about.gitlab.com/2017/11/02/automating-boring-git-operations-gitlab-ci/
+
 services:
   - docker:dind
 
@@ -8,7 +10,7 @@ variables:
   DOCKER_DRIVER: overlay2
 
 # the "git-remote" command below adjusts the "push" url to go via git+ssh, and not via https as default
-# essentially, the before_script below enables "git push" to work
+# essentially, the before_script below enables "git push" to work correctly
 before_script:
    - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
    - eval $(ssh-agent -s)
@@ -16,9 +18,9 @@ before_script:
    - git config --global user.email "autobot@jonstones.com"
    - git config --global user.name "Mr Autobot"
    - mkdir -p ~/.ssh
-   - cat gitlab-known-hosts >> ~/.ssh/known_hosts
+   - cat 'gitlab.com,35.231.145.151 ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBFSMqzJeV9rUzU4kWitGjeR4PWSa29SPqJ1fVkhtj3Hw9xjLVXVYrU9QlYWrOLXBpQ6KWjbjTDTdDkoohFzgbEY=' >> ~/.ssh/known_hosts
    - git remote set-url --push origin git@gitlab.com:${CI_PROJECT_PATH}.git
-
+   # Now Docker login to CI/CD Registry
    - make login
 
 update-prod:
@@ -30,6 +32,7 @@ update-prod:
 
 test-build:
   stage: build
+  
   script:
     - make upgrade Dockerfile 
     - make test-build
