--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,14 +27,11 @@ test-build:
   script:
     - make upgrade Dockerfile 
     - make test-build
-  except:
-    - master
 
 update-prod:
-  stage: build
+  stage: deploy
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
     - make prod
-  only:
-    - master
+
