--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ test-build:
   # the "git-remote" command below adjusts the "push" url to go via git+ssh, and not via https as default
   # essentially, the before_script below enables "git push" to work correctly
   before_script:
-    - 'which ssh-agent || ( apk --update add openssh-client git )'
+    - 'which ssh-agent || ( apk --update add openssh-client git make)'
     - eval $(ssh-agent -s)
     - echo "$GIT_SSH_PRIV_KEY" | tr -d '\r' | ssh-add - > /dev/null
     - git config --global user.email "autobot@jonstones.com"
