--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ test-build:
     # Now Docker login to CI/CD Registry
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
-    - make upgrade Dockerfile 
+    - make upgrade generate_dockerfile 
     - make build
 
 update-prod:
