--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,9 +24,11 @@ test-build:
     - git remote set-url --push origin git@gitlab.com:${CI_PROJECT_PATH}.git
     # Now Docker login to CI/CD Registry
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+    # Dump out all environment vars - for reference
+    - set
   script:
     - make upgrade generate_dockerfile 
-    - make -p build
+    - make build
 
 update-prod:
   stage: deploy
