--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,8 @@ test-build:
     # Dump out all environment vars - for reference
     - set
   script:
-    - make upgrade generate_dockerfile 
+    - make upgrade generate_dockerfile
+    - source Dockerfile.versions
     - make build
 
 update-prod:
@@ -36,5 +37,6 @@ update-prod:
     - apk --update add openssh-client git make
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
+    - source Dockerfile.versions
     - make deploy
 
