--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,8 +28,7 @@ test-build:
     - set
   script:
     - make upgrade generate_dockerfile
-    - source Dockerfile.versions
-    - make build
+    - source Dockerfile.versions && make build
 
 update-prod:
   stage: deploy
@@ -37,6 +36,5 @@ update-prod:
     - apk --update add openssh-client git make
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
-    - source Dockerfile.versions
-    - make deploy
+    - source Dockerfile.versions && make deploy
 
