--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ test-build:
   # the "git-remote" command below adjusts the "push" url to go via git+ssh, and not via https as default
   # essentially, the before_script below enables "git push" to work correctly
   before_script:
-    - 'which ssh-agent || ( apk --update add openssh-client git make)'
+    - 'which ssh-agent || ( apk --update add openssh-client git make curl )'
     - eval $(ssh-agent -s)
     - echo "$GIT_SSH_PRIV_KEY" | tr -d '\r' | ssh-add - > /dev/null
     - git config --global user.email "autobot@jonstones.com"
@@ -26,7 +26,7 @@ test-build:
     # Now Docker login to CI/CD Registry
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
     # Dump out all environment vars - for reference
-    - set
+    # - set
   script:
     - make upgrade generate_dockerfile
     - set -a && source Dockerfile.versions && set +a
