--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,4 +39,4 @@ update-prod:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
     - set -a && source Dockerfile.versions && set +a
-    - make deploy
+    - make deploy stable
