--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ test-build:
   # the "git-remote" command below adjusts the "push" url to go via git+ssh, and not via https as default
   # essentially, the before_script below enables "git push" to work correctly
   before_script:
+    - docker info
     - 'which ssh-agent || ( apk --update add openssh-client git make curl )'
     - eval $(ssh-agent -s)
     - echo "$GIT_SSH_PRIV_KEY" | tr -d '\r' | ssh-add - > /dev/null
