--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,7 @@ upgrade_build:
    # the "git-remote" command below adjusts the "push" url to go via git+ssh, and not via https as default
    # essentially, the before_script below enables "git push" to work correctly
    before_script:
+      - docker ps; # check to ensure we have access to docker.sock
       - 'which ssh-agent || ( apk --update add openssh-client git make curl )'
       - eval $(ssh-agent -s)
       - echo "$GIT_SSH_PRIV_KEY" | tr -d '\r' | ssh-add - > /dev/null
