--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -2,6 +2,7 @@
 
 #from: ubuntu:latest
 FROM %FROM_IMAGE_SHA%
+MAINTAINER "Jon Stones <jon@jonstones.com>"
 
 RUN apt-get update && apt-get -y upgrade >/dev/null && \
     apt-get install -y apt-transport-https lsb-release software-properties-common dirmngr vim curl >/dev/null 
